# vncmanagementdb

./: .gitignore  Dockerfile  Dockerfile_bk  Dockerfile_bk2  README.md  generate-config.yaml  manage.py  pyproject.toml  requirements.txt  requirements2.txt  start_celery.sh  user_management-0.1.0-py3-none-any.whl  vnc_session_client-0.1.0-py3-none-any.whl
apps/account/: decorators.py  middleware.py  models.py  serializers.py  tests.py
apps/account/migrations/: 0001_initial.py  0002_auto_20221130_0109.py  0003_user_sym_talk_user_id.py  0004_auto_20230901_1622.py  0005_auto_20230901_1707.py  0006_remove_user_sym_talk_user_id.py  0007_auto_20231208_0917.py
apps/account/templates/: template.xlsx
apps/account/urls/: admin.py  db.py
apps/account/views/: admin.py  db.py
apps/announcement/: models.py  serializers.py  tests.py
apps/announcement/migrations/: 0001_initial.py  0002_auto_20221228_1009.py  0003_auto_20221228_1011.py  0004_auto_20240307_0915.py
apps/announcement/urls/: admin.py  db.py
apps/announcement/views/: admin.py  db.py
apps/conf/: models.py  options.py  serializers.py  tests.py  views.py
apps/conf/migrations/: 0001_initial.py  0002_appinstallconfig.py  0003_auto_20230404_1735.py  0004_appinstallconfig_server_ip.py  (+9 more)
apps/conf/urls/: db.py  (+1 more)
apps/novncdb/: celery.py  develop_settings.py  production_settings.py  settings.py  urls.py  wsgi.py
apps/utils/: cache.py  handle_passwd.py  models.py  shortcuts.py  tests.py  throttling.py  urls.py  views.py  xss_filter.py
apps/vncserver/: models.py  serializers.py  tasks.py
deploy/: requirements.txt
(+27 files in other folders)
