[tool.poetry]
name = "vvcasedb"
version = "0.1.0"
description = "V&V testcase database Backend"
authors = ["FSSlc <fsslc235@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "2.*"
django-compression-middleware = "^0.4.1"
django-dbconn-retry = "^0.1.5"
django-dramatiq = "^0.9.1"
django-redis = "^4.12.1"
django-treebeard = "^4.3.1"
djangorestframework = "^3.11.0"
Envelopes = "^0.4"
jsonpath-rw-ext = "^1.2.2"
Pillow = "^7.1.2"
psycopg2-binary = "^2.8.5"
python-magic = "^0.4.18"
raven = "^6.10.0"
qrcode = "^6.1"
otpauth = "^1.0.1"
xlsxwriter = "^1.2.9"
requests = "^2.24.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
flake8 = "^3.8.3"
ipython = "^7.15.0"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
